Fixed #27, opened #28 (Added alot of flash messages)

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -71,6 +71,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section game-details">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header row">
 					<div class="col-md-12">
 						<h1>
