--- a/app/views/legal/privacy/index.html.erb
+++ b/app/views/legal/privacy/index.html.erb
@@ -14,6 +14,10 @@
 	</div>
 </div>
 
+<div class="container">
+	<%= render partial: 'partials/flash', locals: { flash: flash } %>
+</div>
+
 <div class="container legal-body">
 	<div class="row">
 		<div class="col-md-8">
