--- a/app/views/legal/terms/index.html.erb
+++ b/app/views/legal/terms/index.html.erb
@@ -13,3 +13,7 @@
 		<p>stuff.</p>
 	</div>
 </div>
+
+<div class="container">
+	<%= render partial: 'partials/flash', locals: { flash: flash } %>
+</div>
