--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -19,6 +19,9 @@
 	<div class="row">
 		<div class="col-md-9">
 			<div class="bs-branch-section blog">
+
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
+
 				<div class="page-header">
 					<h1>Blog</h1>
 				</div>
