--- a/app/views/blog/view/index.html.erb
+++ b/app/views/blog/view/index.html.erb
@@ -24,6 +24,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-9">
+			<%= render partial: 'partials/flash', locals: { flash: flash } %>
 			<div class="bs-branch-section blog-post">
 				<div class="row">
 					<div class="col-md-12 panel">
