--- a/app/views/halo4/commendations/index.html.erb
+++ b/app/views/halo4/commendations/index.html.erb
@@ -20,6 +20,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section commendations">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1><%= @friendly_name %> Commendations</h1>
 				</div>
