--- a/app/views/halo4/competitive_skill_rank/details.html.erb
+++ b/app/views/halo4/competitive_skill_rank/details.html.erb
@@ -19,6 +19,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section csr-details">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1><%= gamertag_validation(@service_record['Gamertag']) %>'s <%= @current_skill_rank['PlaylistName'] %> CSR</h1>
 				</div>
