--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -18,6 +18,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section csr">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1><%= gamertag_validation(@service_record['Gamertag']) %>'s CSR</h1>
 				</div>
