--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,6 +47,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section game-feed">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1>Game Feed</h1>
 				</div>
