--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -4,6 +4,9 @@
 
 <div class="container">
 	<div class="search-result-block">
+
+		<%= render partial: 'partials/flash', locals: { flash: flash } %>
+
 		<div class="page-header row">
 			<div class="col-md-11">
 				<h1 id="less">Branch Accounts</h1>
