--- a/app/views/user/account/followers/index.html.erb
+++ b/app/views/user/account/followers/index.html.erb
@@ -19,6 +19,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section follow">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1><%= @account.username %>'s Followers</h1>
 				</div>
