--- a/app/views/user/settings/profile/index.html.erb
+++ b/app/views/user/settings/profile/index.html.erb
@@ -19,6 +19,7 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section overview">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1>Profile</h1>
 				</div>
