--- a/app/views/user/settings/session/index.html.erb
+++ b/app/views/user/settings/session/index.html.erb
@@ -46,6 +46,7 @@ $(document).ready(function() {
 
 		<div class="col-md-9">
 			<div class="bs-branch-section sessions">
+				<%= render partial: 'partials/flash', locals: { flash: flash } %>
 				<div class="page-header">
 					<h1>Sessions</h1>
 				</div>
