oops, title fixes

--- a/app/views/user/account/followers/index.html.erb
+++ b/app/views/user/account/followers/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :user, true %>
-<% content_for :title, "#{@account.username}'s Followers" %>	
+<% content_for :title, "#{@account.username} - Followers" %>	
 <% content_for :has_footer, true %>
 <% content_for :account_active, 'followers' %>
 <% content_for :scripts do %>
