--- a/app/views/user/account/following/index.html.erb
+++ b/app/views/user/account/following/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :user, true %>
-<% content_for :title, "People #{@account.username} Follows" %>	
+<% content_for :title, "#{@account.username} - Following" %>	
 <% content_for :has_footer, true %>
 <% content_for :account_active, 'following' %>
 <% content_for :scripts do %>
