--- a/app/views/user/account/home/index.html.erb
+++ b/app/views/user/account/home/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :user, true %>
-<% content_for :title, 'Xerax' %>	
+<% content_for :title, @account.username %>	
 <% content_for :has_footer, true %>
 <% content_for :account_active, 'overview' %>
 <% content_for :scripts do %>
