--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -75,9 +75,8 @@
 
 		<div class="scripts">
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.map"></script>
-			<%= javascript_include_tag "bootstrap" %>
-			<%= javascript_include_tag "Chart" %>
+			<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
 			<%= javascript_include_tag "application" %>
 
 			<!-- Scripts -->
