oops, wrong order. silly alex

--- a/app/views/user/account/partials/favourites/_halo4_game.html.erb
+++ b/app/views/user/account/partials/favourites/_halo4_game.html.erb
@@ -27,9 +27,9 @@ Guide;
 						on <%= h4_favourite.map_variant_name %>
 					<% else %>
 						<h2>
-							<%= h4_favourite.game_variant_name %>
+							<%= h4_favourite.map_variant_name %>
 						</h2>
-						on <%= h4_favourite.map_variant_name %>
+						on <%= h4_favourite.game_variant_name %>
 					<% end %>
 
 					<div class="mvp-stats">
