this also doesn't exist, shhhhh

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,11 @@ body {
 	margin-bottom: 10px;
 }
 
+.ad-container {
+	width: 790px;
+	margin: 100px auto 0 auto;
+}
+
 /* UL Helpers */
 ul.no-style {
 	list-style-type: none;
